traversal.snake.Snake.scala.error
Erreur de compilation :
Snake:34: error: ';' expected but 'else' found.
    else if (estFaceMur() && ((getDirection() == Direction.EST && b) || (getDirection() == Direction.WEST && a))) {
    ^