traversal.snake.Snake.scala.code
def posFinal(a:Boolean,b:Boolean):Boolean ={
  
	if (estFaceMur() && ((getDirection() == Direction.EST && b) || (getDirection() == Direction.WEST && a))){
    return true
  }
  else {
    return false
  }
  }

 

 

override def run() {
  baisseBrosse()
  droite()
  var a = estFaceMur()
  retourne()
  var b = estFaceMur()
  droite()
	while (!posFinal(a,b)){
 		a = false
    b = false
    
    
    if (estFaceMur()){
    droite()
  	a = estFaceMur()
  retourne()
  	b = estFaceMur()
  droite()
      
    else if (estFaceMur() && ((getDirection() == Direction.EST && b) || (getDirection() == Direction.WEST && a))) {
      break()
    }
      
    else if (estFaceMur() && getDirection() == Direction.EST) {
      gauche()
      avance()
      gauche()
    }
    else if (estFaceMur() && getDirection() == Direction.WEST) {
      droite()
      avance()
      droite()
    }
    
  
    }
    avance()
  } 
	leveBrosse
  
}